--- a/oziexplorer_uiview_converter.glade
+++ b/oziexplorer_uiview_converter.glade
@@ -26,7 +26,7 @@ THE SOFTWARE.
 Author: Phitherek_ SO9PH
 
 -->
-<interface domain="en">
+<interface domain="C">
   <requires lib="gtk+" version="3.16"/>
   <!-- interface-license-type mit -->
   <!-- interface-name OziExplorer to UI-View Converter -->
@@ -59,7 +59,7 @@ Author: Phitherek_ SO9PH
   </object>
   <object class="GtkApplicationWindow" id="mainwindow">
     <property name="can_focus">False</property>
-    <property name="title" translatable="yes">OziExplorer to UI-View Converter (C) 2015 by Phitherek_ SO9PH</property>
+    <property name="title" translatable="yes">OziExplorer to UI-View Converter v. 0.1.1 (C) 2015 by Phitherek_ SO9PH</property>
     <property name="role">oziexplorer_uiview_converter_mainwindow</property>
     <property name="startup_id">oziexplorer_uiview_converter_mainwindow</property>
     <child>
@@ -423,6 +423,7 @@ Author: Phitherek_ SO9PH
   </object>
   <object class="GtkAboutDialog" id="aboutdialog">
     <property name="can_focus">False</property>
+    <property name="type">popup</property>
     <property name="title" translatable="yes">About OziExplorer to UIView Converter...</property>
     <property name="role">oziexplorer_uiview_converter_aboutdialog</property>
     <property name="modal">True</property>
@@ -431,7 +432,7 @@ Author: Phitherek_ SO9PH
     <property name="transient_for">mainwindow</property>
     <property name="startup_id">oziexplorer_uiview_converter_aboutdialog</property>
     <property name="program_name">OziExplorer to UI-View Converter</property>
-    <property name="version">v. 0.1</property>
+    <property name="version">v. 0.1.1</property>
     <property name="copyright" translatable="yes">(C) 2015 by Phitherek_ SO9PH</property>
     <property name="authors">Phitherek_ SO9PH</property>
     <property name="logo_icon_name">application-x-executable</property>
