--- a/oziexplorer_uiview_converter.glade
+++ b/oziexplorer_uiview_converter.glade
@@ -59,7 +59,7 @@ Author: Phitherek_ SO9PH
   </object>
   <object class="GtkApplicationWindow" id="mainwindow">
     <property name="can_focus">False</property>
-    <property name="title" translatable="yes">OziExplorer to UI-View Converter v. 0.2 (C) 2015 by Phitherek_ SO9PH</property>
+    <property name="title" translatable="yes">OziExplorer to UI-View Converter v. 0.3 (C) 2015 by Phitherek_ SO9PH</property>
     <property name="role">oziexplorer_uiview_converter_mainwindow</property>
     <property name="startup_id">oziexplorer_uiview_converter_mainwindow</property>
     <child>
@@ -141,7 +141,7 @@ Author: Phitherek_ SO9PH
                         <property name="can_focus">False</property>
                         <property name="orientation">vertical</property>
                         <child>
-                          <object class="GtkLabel" id="inchooserbox">
+                          <object class="GtkLabel" id="inchooserlabel">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="halign">end</property>
@@ -155,7 +155,7 @@ Author: Phitherek_ SO9PH
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkLabel" id="outchooserbox">
+                          <object class="GtkLabel" id="outchooserlabel">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="halign">end</property>
@@ -432,7 +432,7 @@ Author: Phitherek_ SO9PH
     <property name="transient_for">mainwindow</property>
     <property name="startup_id">oziexplorer_uiview_converter_aboutdialog</property>
     <property name="program_name">OziExplorer to UI-View Converter</property>
-    <property name="version">v. 0.2</property>
+    <property name="version">v. 0.3</property>
     <property name="copyright" translatable="yes">(C) 2015 by Phitherek_ SO9PH</property>
     <property name="authors">Phitherek_ SO9PH</property>
     <property name="logo_icon_name">application-x-executable</property>
@@ -462,7 +462,7 @@ Author: Phitherek_ SO9PH
   <object class="GtkFileChooserDialog" id="inchooserdialog">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">Choose input directory with OziExplorer files...</property>
-    <property name="role">oziexplorer_to_uiview_converter_infiledialog</property>
+    <property name="role">oziexplorer_to_uiview_converter_inchooserdialog</property>
     <property name="modal">True</property>
     <property name="window_position">center</property>
     <property name="destroy_with_parent">True</property>
@@ -471,7 +471,7 @@ Author: Phitherek_ SO9PH
     <property name="skip_pager_hint">True</property>
     <property name="urgency_hint">True</property>
     <property name="transient_for">mainwindow</property>
-    <property name="startup_id">oziexplorer_to_uiview_converter_infiledialog</property>
+    <property name="startup_id">oziexplorer_to_uiview_converter_inchooserdialog</property>
     <property name="action">select-folder</property>
     <property name="preview_widget_active">False</property>
     <property name="show_hidden">True</property>
@@ -509,6 +509,7 @@ Author: Phitherek_ SO9PH
     <property name="title" translatable="yes">Choose output directory for UI-View files...</property>
     <property name="role">oziexplorer_to_uiview_converter_outchooseerdialog</property>
     <property name="modal">True</property>
+    <property name="window_position">center</property>
     <property name="destroy_with_parent">True</property>
     <property name="type_hint">dialog</property>
     <property name="skip_taskbar_hint">True</property>
